# stm32_template_platformio

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  PLACEHOLDER.ioc  README.md  cubemx_cleanup.sh  platformio.ini  remove_strict_compilation.py  stm32_onboarding.ioc  stm32_template_platformio.ioc
.github/workflows/: ci-pipeline.yml
Core/Inc/: i2c.h
Core/Src/: adc.c  fmac.c  gpio.c  rtc.c  sdmmc.c  stm32h7xx_hal_msp.c
Inc/: ffconf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
Src/: adc.c  cordic.c  dma.c  fdcan.c  freertos.c  i2c.c  main.c  sdmmc.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c  usart.c
Src/application/init/: init.c  init.h
inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
scripts/: add_hardfloat.py  cubemx_cleanup.sh  format.sh  run.sh  sort_ioc.py
src/: CMakeLists.txt  cordic.c  fmac.c  freertos.c  gpio.c  i2c.c  main.c  platformio.ini  stm32h7xx_it.c
src/application/blinky/: blinky.c  blinky.h
src/application/init/: init.c
src/driver/lsm6dso/: LSM6DSO_regmap.h  lsm6dso.c  lsm6dso.h
src/drivers/: main.c
src/drivers/gpio/: gpio.c  gpio.h
test/: test_example.cpp
test/mocks/: FreeRTOS.h  fatfs.c  fatfs.h  fff_globals.c  hal_adc_mock.c  hal_adc_mock.h  hal_fdcan_mock.h  hal_gpio_mock.c  hal_gpio_mock.h  hal_i2c_mock.c  hal_i2c_mock.h  hal_timer_mock.c  hal_timer_mock.h  hal_uart_mock.c  hal_uart_mock.h  stm32h7xx_hal.c  stm32h7xx_hal.h
test/unit/: example_test.cpp  gpio_test.cpp
